gccida/c1/staticp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/staticp/src/tree.c:2020:16: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
LODWORD( v2) = lang_hooks_0.staticp( arg); 
               ^~~~~~~~~~~~
               lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/staticp/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/staticp/src/tree.c:2020:36: error: called object type '<dependent type>' is not a function or function pointer
LODWORD( v2) = lang_hooks_0.staticp( arg); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/staticp/src/obj/tree.o] Error 1
